--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGO_URL=mongodb://localhost:27017//JobPortal
+MONGO_URL=mongodb://localhost:27017/JobPortal
 PORT=8000
 SECRET_KEY=vanshverma123456
